compiled/echo-server/manifests/echo-server-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: echo-server
  name: echo-server
