compiled/echo-server/manifests/echo-server-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: echo-server
  name: echo-server
  namespace: echo-server
spec:
  ports:
    - name: http
      nodePort: 30001
      port: 9999
      protocol: TCP
      targetPort: http
    - name: internal
      nodePort: 30002
      port: 8081
      protocol: TCP
      targetPort: internal
    - name: nginx
      port: 80
      protocol: TCP
      targetPort: nginx
  selector:
    name: echo-server
  sessionAffinity: None
  type: NodePort
