compiled/echo-server/manifests/global-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    name: global
  name: global
  namespace: echo-server
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: echo-server
              servicePort: 80
            path: /echo/*
